<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="30"
        android:weightSum="10"
        android:background="@android:color/darker_gray">
        <Button
            android:id="@+id/btnSmall"
            android:layout_width="wrap_content"
            android:text="@string/small_btn"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnBig"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/big_button"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="70"
        android:background="@drawable/compass">
        <Button
            android:id="@+id/btnNorth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/north"/>
        <Button
            android:id="@+id/btnWest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/west"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btnEast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/Central"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/central"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btnsouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/south"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/btnNE"
            android:text="@string/ne"
            android:layout_margin="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEast"
            android:layout_toRightOf="@id/btnNorth"/>
        <Button
            android:id="@+id/btnSE"
            android:text="SE"
            android:layout_margin="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEast"
            android:layout_toRightOf="@id/btnsouth"/>
        <Button
            android:id="@+id/btnSW"
            android:text="SW"
            android:layout_margin="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnWest"
            android:layout_toLeftOf="@id/btnsouth"/>
        <Button
            android:id="@+id/btnNw"
            android:text="NE"
            android:layout_margin="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnEast"
            android:layout_toLeftOf="@+id/btnNorth"/>
    </RelativeLayout>
</LinearLayout>